WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
112304
Size of box which have css column and text-shadow set is not calculated properly
https://bugs.webkit.org/show_bug.cgi?id=112304
Summary
Size of box which have css column and text-shadow set is not calculated properly
Alice Lieutier
Reported
2013-03-13 17:44:48 PDT
Created
attachment 193030
[details]
reduced test-case If a div has css columns with column-fill set to balance and this div has a text-shadow, then the size of the div is not calculated properly. The text-shadow should not change the size of the div. e.g: div { -webkit-column-count: 2; -webkit-column-fill: balance; text-shadow: 0 0 20px blue; } Attached is a testcase where a text-shadow is applied on the divs on hover. For the third div, the problem is even worse, as when the div is not hovered anymore, the size without text-shadow is not properly calculated either. I have this problem on mac OS and linux.
Attachments
reduced test-case
(1.29 KB, text/html)
2013-03-13 17:44 PDT
,
Alice Lieutier
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2022-09-17 03:14:48 PDT
All browsers differ: *** Safari Technology Preview 153 *** Second and third <div> makes layout shift and push the container on the bottom and also malformed text distribution *** Chrome Canary 107 *** Not layout shift but third <div> does not have text shadow *** Firefox Nightly 106 *** No layout shift and no weird quirks like on third <div> - It just works! _____ I updated test case to JSFiddle to remove any -webkit- prefix and make it streamline. Link -
https://jsfiddle.net/6abn9hrq/show
Changing Status to "New" to track weird "layout shift".
Radar WebKit Bug Importer
Comment 2
2022-09-19 09:45:25 PDT
<
rdar://problem/100126421
>
Chase Knowlden
Comment 3
2022-12-03 18:49:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7124
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug