Size of box which have css column and text-shadow set is not calculated properly https://bugs.webkit.org/show_bug.cgi?id=112304 rdar://100126421

Reviewed by NOBODY (OOPS!).

Add an assertion to the color property of text shadow that checks
whether the string is empty or not.